[metadata]
name = devcontainer
version = 0.0.1
description = A python package for launching devcontainer environments
long_description = file: readme.md
author = John Kitchin
author_email = "John Kitchin" <johnrkitchin@gmail.com>
url = https://github.com/jkitchin/devcontainer
license = MIT
license_files = LICENSE
classifiers = License :: OSI Approved :: MIT License

[options]
packages=find:
install_requires =
    jstyleson
		 
[options.entry_points]
console_scripts =
    devcontainer = devcontainer.devcontainer:devcontainer